cleanup - small changes

--- a/Project_3_Cocktail_API_Python_Script.ipynb
+++ b/Project_3_Cocktail_API_Python_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -25137,7 +25137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -25158,7 +25158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -25175,7 +25175,7 @@
     "    all_cocktails = json.load(json_file)\n",
     "\n",
     "# Specify the CSV file path\n",
-    "csv_file_path = 'Output\\cocktails_output.csv'\n",
+    "csv_file_path = 'Outputs\\cocktails_output.csv'\n",
     "\n",
     "# Extract column headers from the keys of the first cocktail in the list\n",
     "fieldnames = all_cocktails[0].keys()\n",
@@ -25193,7 +25193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -25605,14 +25605,14 @@
        "[426 rows x 51 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the JSON file into a Pandas DataFrame\n",
-    "df = pd.read_csv('Output\\cocktails_output.csv')\n",
+    "df = pd.read_csv('Outputs\\cocktails_output.csv')\n",
     "\n",
     "# Display the DataFrame\n",
     "df"
@@ -25620,7 +25620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -25640,7 +25640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -25661,6 +25661,74 @@
       "Length: 327, dtype: float64\n",
       "Data has been written to output.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ingredient</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gin</td>\n",
+       "      <td>81.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Vodka</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Light rum</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rum</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Scotch</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Ingredient  Count\n",
+       "0        Gin   81.0\n",
+       "1      Vodka   64.0\n",
+       "2  Light rum   28.0\n",
+       "3        Rum   19.0\n",
+       "4     Scotch   13.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -25673,16 +25741,11 @@
     "# Get unique value counts for values in the selected columns\n",
     "unique_counts = pd.concat([df[col].value_counts() for col in selected_columns], axis=1).sum(axis=1)\n",
     "                         \n",
-    "\n",
     "# Display the unique counts for values in the selected columns\n",
     "print(unique_counts)\n",
     "\n",
-    "unique_counts = unique_counts.reset_index()\n",
-    "unique_counts.columns = ['Ingredient', 'Count']\n",
-    "unique_counts.head()\n",
-    "\n",
     "# Specify the output file path\n",
-    "output_file = 'Output\\ingredient_unique_count.csv'\n",
+    "output_file = 'Outputs\\ingredient_unique_count.csv'\n",
     "\n",
     "# Write the data to a CSV file\n",
     "with open(output_file, 'w', newline='') as file:\n",
@@ -25691,12 +25754,16 @@
     "    for ingredient, count in unique_counts.items():\n",
     "        writer.writerow([ingredient, count])\n",
     "\n",
-    "print(\"Data has been written to output.csv\")\n"
+    "print(\"Data has been written to output.csv\")\n",
+    "\n",
+    "unique_counts = unique_counts.reset_index()\n",
+    "unique_counts.columns = ['Ingredient', 'Count']\n",
+    "unique_counts.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -25744,7 +25811,7 @@
     "print(value_counts)\n",
     "\n",
     "# Specify the output file path\n",
-    "output_file = 'Output\\Category_unique_count.csv'\n",
+    "output_file = 'Outputs\\Category_unique_count.csv'\n",
     "\n",
     "# Write the data to a CSV file\n",
     "with open(output_file, 'w', newline='') as file:\n",
@@ -25758,7 +25825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25790,7 +25857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -26202,7 +26269,7 @@
        "[426 rows x 32 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26213,7 +26280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -26230,7 +26297,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26241,7 +26308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -26377,7 +26444,7 @@
        "4                         Yes  2016-09-02 11:29:29  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26417,7 +26484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -26553,7 +26620,7 @@
        "4                         Yes  2016-09-02 11:29:29  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26566,7 +26633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -26707,7 +26774,7 @@
        "4             NaN             NaN  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26721,7 +26788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -26855,7 +26922,7 @@
        "4         NaN         NaN         NaN         NaN          NaN          NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
