--- a/state_taxes.ipynb
+++ b/state_taxes.ipynb
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1135,432 +1135,27 @@
        "      <td>41.4</td>\n",
        "      <td>24.1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Vermont</td>\n",
-       "      <td>3.22</td>\n",
-       "      <td>35.4</td>\n",
-       "      <td>23.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>Wisconsin</td>\n",
-       "      <td>3.11</td>\n",
-       "      <td>35.6</td>\n",
-       "      <td>25.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Maine</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>22.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Colorado</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>20.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>2.94</td>\n",
-       "      <td>31.8</td>\n",
-       "      <td>20.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Minnesota</td>\n",
-       "      <td>2.85</td>\n",
-       "      <td>29.9</td>\n",
-       "      <td>23.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>2.83</td>\n",
-       "      <td>36.9</td>\n",
-       "      <td>18.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Florida</td>\n",
-       "      <td>2.74</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>20.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Hawaii</td>\n",
-       "      <td>2.71</td>\n",
-       "      <td>31.5</td>\n",
-       "      <td>20.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Rhode Island</td>\n",
-       "      <td>2.71</td>\n",
-       "      <td>40.3</td>\n",
-       "      <td>21.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>Oregon</td>\n",
-       "      <td>2.71</td>\n",
-       "      <td>27.9</td>\n",
-       "      <td>21.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Missouri</td>\n",
-       "      <td>2.68</td>\n",
-       "      <td>27.6</td>\n",
-       "      <td>19.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>New Jersey</td>\n",
-       "      <td>2.63</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>16.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>California</td>\n",
-       "      <td>2.63</td>\n",
-       "      <td>27.7</td>\n",
-       "      <td>18.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Massachusetts</td>\n",
-       "      <td>2.62</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>22.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Louisiana</td>\n",
-       "      <td>2.59</td>\n",
-       "      <td>31.2</td>\n",
-       "      <td>21.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>2.53</td>\n",
-       "      <td>29.2</td>\n",
-       "      <td>20.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Connecticut</td>\n",
-       "      <td>2.50</td>\n",
-       "      <td>30.4</td>\n",
-       "      <td>19.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>2.42</td>\n",
-       "      <td>28.8</td>\n",
-       "      <td>22.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Texas</td>\n",
-       "      <td>2.41</td>\n",
-       "      <td>25.4</td>\n",
-       "      <td>19.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>2.39</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>15.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>South Dakota</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>36.1</td>\n",
-       "      <td>24.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Iowa</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>26.8</td>\n",
-       "      <td>24.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Indiana</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>17.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Pennsylvania</td>\n",
-       "      <td>2.32</td>\n",
-       "      <td>25.4</td>\n",
-       "      <td>19.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>North Carolina</td>\n",
-       "      <td>2.31</td>\n",
-       "      <td>25.9</td>\n",
-       "      <td>16.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Tennessee</td>\n",
-       "      <td>2.30</td>\n",
-       "      <td>23.5</td>\n",
-       "      <td>17.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>New Mexico</td>\n",
-       "      <td>2.30</td>\n",
-       "      <td>29.4</td>\n",
-       "      <td>17.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Virginia</td>\n",
-       "      <td>2.27</td>\n",
-       "      <td>30.3</td>\n",
-       "      <td>17.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>Washington</td>\n",
-       "      <td>2.26</td>\n",
-       "      <td>32.7</td>\n",
-       "      <td>16.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>2.24</td>\n",
-       "      <td>22.3</td>\n",
-       "      <td>17.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>New York</td>\n",
-       "      <td>2.22</td>\n",
-       "      <td>20.2</td>\n",
-       "      <td>19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>2.17</td>\n",
-       "      <td>33.2</td>\n",
-       "      <td>23.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Maryland</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>28.3</td>\n",
-       "      <td>16.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>2.12</td>\n",
-       "      <td>32.5</td>\n",
-       "      <td>20.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Kansas</td>\n",
-       "      <td>2.12</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>20.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Kentucky</td>\n",
-       "      <td>2.12</td>\n",
-       "      <td>25.5</td>\n",
-       "      <td>18.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>South Carolina</td>\n",
-       "      <td>2.12</td>\n",
-       "      <td>32.8</td>\n",
-       "      <td>21.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Idaho</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>31.5</td>\n",
-       "      <td>19.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>2.08</td>\n",
-       "      <td>25.9</td>\n",
-       "      <td>14.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Arkansas</td>\n",
-       "      <td>1.92</td>\n",
-       "      <td>25.7</td>\n",
-       "      <td>15.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Georgia</td>\n",
-       "      <td>1.91</td>\n",
-       "      <td>20.7</td>\n",
-       "      <td>17.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>Oklahoma</td>\n",
-       "      <td>1.85</td>\n",
-       "      <td>26.8</td>\n",
-       "      <td>14.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>West Virginia</td>\n",
-       "      <td>1.82</td>\n",
-       "      <td>26.1</td>\n",
-       "      <td>15.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>Utah</td>\n",
-       "      <td>1.36</td>\n",
-       "      <td>21.7</td>\n",
-       "      <td>11.9</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             State  Ethanol_per_Capita  Fatalities_Involving_Alcohol  \\\n",
-       "29   New Hampshire                4.83                          33.1   \n",
-       "7         Delaware                4.01                          25.0   \n",
-       "28          Nevada                3.43                          27.3   \n",
-       "26         Montana                3.32                          46.4   \n",
-       "34    North Dakota                3.26                          41.4   \n",
-       "45         Vermont                3.22                          35.4   \n",
-       "49       Wisconsin                3.11                          35.6   \n",
-       "19           Maine                2.99                          34.4   \n",
-       "5         Colorado                2.97                          34.0   \n",
-       "50         Wyoming                2.94                          31.8   \n",
-       "23       Minnesota                2.85                          29.9   \n",
-       "1           Alaska                2.83                          36.9   \n",
-       "9          Florida                2.74                          22.0   \n",
-       "11          Hawaii                2.71                          31.5   \n",
-       "39    Rhode Island                2.71                          40.3   \n",
-       "37          Oregon                2.71                          27.9   \n",
-       "25        Missouri                2.68                          27.6   \n",
-       "30      New Jersey                2.63                          22.8   \n",
-       "4       California                2.63                          27.7   \n",
-       "21   Massachusetts                2.62                          30.5   \n",
-       "18       Louisiana                2.59                          31.2   \n",
-       "22        Michigan                2.53                          29.2   \n",
-       "6      Connecticut                2.50                          30.4   \n",
-       "13        Illinois                2.42                          28.8   \n",
-       "43           Texas                2.41                          25.4   \n",
-       "24     Mississippi                2.39                          18.5   \n",
-       "41    South Dakota                2.34                          36.1   \n",
-       "15            Iowa                2.34                          26.8   \n",
-       "14         Indiana                2.34                          19.0   \n",
-       "38    Pennsylvania                2.32                          25.4   \n",
-       "33  North Carolina                2.31                          25.9   \n",
-       "42       Tennessee                2.30                          23.5   \n",
-       "31      New Mexico                2.30                          29.4   \n",
-       "46        Virginia                2.27                          30.3   \n",
-       "47      Washington                2.26                          32.7   \n",
-       "2          Arizona                2.24                          22.3   \n",
-       "32        New York                2.22                          20.2   \n",
-       "27        Nebraska                2.17                          33.2   \n",
-       "20        Maryland                2.15                          28.3   \n",
-       "35            Ohio                2.12                          32.5   \n",
-       "16          Kansas                2.12                          19.4   \n",
-       "17        Kentucky                2.12                          25.5   \n",
-       "40  South Carolina                2.12                          32.8   \n",
-       "12           Idaho                2.10                          31.5   \n",
-       "0          Alabama                2.08                          25.9   \n",
-       "3         Arkansas                1.92                          25.7   \n",
-       "10         Georgia                1.91                          20.7   \n",
-       "36        Oklahoma                1.85                          26.8   \n",
-       "48   West Virginia                1.82                          26.1   \n",
-       "44            Utah                1.36                          21.7   \n",
+       "            State  Ethanol_per_Capita  Fatalities_Involving_Alcohol  \\\n",
+       "29  New Hampshire                4.83                          33.1   \n",
+       "7        Delaware                4.01                          25.0   \n",
+       "28         Nevada                3.43                          27.3   \n",
+       "26        Montana                3.32                          46.4   \n",
+       "34   North Dakota                3.26                          41.4   \n",
        "\n",
        "    Excessive_Drinking_Rate  \n",
        "29                     20.8  \n",
        "7                      20.5  \n",
        "28                     19.5  \n",
        "26                     24.3  \n",
-       "34                     24.1  \n",
-       "45                     23.2  \n",
-       "49                     25.2  \n",
-       "19                     22.5  \n",
-       "5                      20.1  \n",
-       "50                     20.5  \n",
-       "23                     23.4  \n",
-       "1                      18.1  \n",
-       "9                      20.2  \n",
-       "11                     20.7  \n",
-       "39                     21.7  \n",
-       "37                     21.2  \n",
-       "25                     19.5  \n",
-       "30                     16.0  \n",
-       "4                      18.8  \n",
-       "21                     22.5  \n",
-       "18                     21.9  \n",
-       "22                     20.5  \n",
-       "6                      19.2  \n",
-       "13                     22.9  \n",
-       "43                     19.6  \n",
-       "24                     15.9  \n",
-       "41                     24.4  \n",
-       "15                     24.6  \n",
-       "14                     17.7  \n",
-       "38                     19.8  \n",
-       "33                     16.5  \n",
-       "42                     17.2  \n",
-       "31                     17.4  \n",
-       "46                     17.3  \n",
-       "47                     16.5  \n",
-       "2                      17.4  \n",
-       "32                     19.0  \n",
-       "27                     23.2  \n",
-       "20                     16.0  \n",
-       "35                     20.7  \n",
-       "16                     20.0  \n",
-       "17                     18.2  \n",
-       "40                     21.7  \n",
-       "12                     19.6  \n",
-       "0                      14.8  \n",
-       "3                      15.9  \n",
-       "10                     17.8  \n",
-       "36                     14.5  \n",
-       "48                     15.2  \n",
-       "44                     11.9  "
+       "34                     24.1  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,7 +1164,7 @@
     "ethical_df = merged_df[['State', 'Ethanol_per_Capita', 'Fatalities_Involving_Alcohol', 'Excessive_Drinking_Rate']].copy()\n",
     "ethical_df = ethical_df[ethical_df['State'] != 'District of Columbia']\n",
     "ethical_df = ethical_df.sort_values(by = 'Ethanol_per_Capita', ascending = False)\n",
-    "ethical_df"
+    "ethical_df.head()"
    ]
   },
   {
@@ -1578,6 +1173,29 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build scatter plot for latitude vs. temperature\n",
+    "latitude = city_data_df['Lat']\n",
+    "temperature = city_data_df['Max Temp']\n",
+    "plt.scatter(latitude, temperature, marker = 'o', facecolors = 'cyan', edgecolors = 'black')\n",
+    "\n",
+    "# Incorporate the other graph properties\n",
+    "plt.title('City Latitude vs. Max Temperature')\n",
+    "plt.xlabel('Latitude')\n",
+    "plt.ylabel('Max Temperature')\n",
+    "\n",
+    "# Save the figure\n",
+    "plt.savefig(\"../output_data/Fig1.png\")\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
