--- a/state_taxes.ipynb
+++ b/state_taxes.ipynb
@@ -992,7 +992,40 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "States with the highest spirits tax: \n",
+      "          State  Spirits_Tax\n",
+      "47   Washington        14.27\n",
+      "1        Alaska        12.80\n",
+      "13     Illinois         8.55\n",
+      "9       Florida         6.50\n",
+      "32     New York         6.44\n",
+      "31   New Mexico         6.06\n",
+      "11       Hawaii         5.98\n",
+      "6   Connecticut         5.94\n",
+      "36     Oklahoma         5.56\n",
+      "30   New Jersey         5.50\n",
+      "\n",
+      "\n",
+      "States with the lowest spirits tax: \n",
+      "             State  Spirits_Tax\n",
+      "20        Maryland         1.50\n",
+      "17        Kentucky         1.92\n",
+      "25        Missouri         2.00\n",
+      "5         Colorado         2.28\n",
+      "43           Texas         2.40\n",
+      "16          Kansas         2.50\n",
+      "34    North Dakota         2.50\n",
+      "3         Arkansas         2.50\n",
+      "14         Indiana         2.68\n",
+      "40  South Carolina         2.72\n"
+     ]
+    }
+   ],
    "source": [
     "# states with highest spirits taxes\n",
     "state_spirits_df = merged_df[['State', 'Spirits_Tax']].copy()\n",
@@ -1003,20 +1036,53 @@
     "bottom_sorted_tax = state_spirits_df[(state_spirits_df['Spirits_Tax'].notnull()) & (state_spirits_df['Spirits_Tax'] != 0)]\n",
     "bottom_sorted_tax = bottom_sorted_tax.sort_values(by = 'Spirits_Tax', ascending = True)\n",
     "\n",
-    "# # print results \n",
-    "# print(\"States with the highest spirits tax: \")\n",
-    "# print(top_sorted_tax.head(10))\n",
-    "# print(\"\")\n",
-    "# print(\"\")\n",
-    "# print(\"States with the lowest spirits tax: \")\n",
-    "# print(bottom_sorted_tax.head(10))"
+    "# print results \n",
+    "print(\"States with the highest spirits tax: \")\n",
+    "print(top_sorted_tax.head(10))\n",
+    "print(\"\")\n",
+    "print(\"\")\n",
+    "print(\"States with the lowest spirits tax: \")\n",
+    "print(bottom_sorted_tax.head(10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "States with the highest ethanol per capita: \n",
+      "            State  Ethanol_per_Capita\n",
+      "29  New Hampshire                4.83\n",
+      "7        Delaware                4.01\n",
+      "28         Nevada                3.43\n",
+      "26        Montana                3.32\n",
+      "34   North Dakota                3.26\n",
+      "45        Vermont                3.22\n",
+      "49      Wisconsin                3.11\n",
+      "19          Maine                2.99\n",
+      "5        Colorado                2.97\n",
+      "50        Wyoming                2.94\n",
+      "\n",
+      "\n",
+      "States with the lowest ethanol per capita: \n",
+      "             State  Ethanol_per_Capita\n",
+      "44            Utah                1.36\n",
+      "48   West Virginia                1.82\n",
+      "36        Oklahoma                1.85\n",
+      "10         Georgia                1.91\n",
+      "3         Arkansas                1.92\n",
+      "0          Alabama                2.08\n",
+      "12           Idaho                2.10\n",
+      "35            Ohio                2.12\n",
+      "40  South Carolina                2.12\n",
+      "16          Kansas                2.12\n"
+     ]
+    }
+   ],
    "source": [
     "# states with highest ethanol consumption\n",
     "state_consumption_df = merged_df[['State', 'Ethanol_per_Capita']].copy()\n",
@@ -1026,47 +1092,109 @@
     "# states with lowest consumption\n",
     "bottom_sorted_consumption = state_consumption_df.sort_values(by = 'Ethanol_per_Capita', ascending = True)\n",
     "\n",
-    "# # print results \n",
-    "# print(\"States with the highest ethanol per capita: \")\n",
-    "# print(top_sorted_consumption.head(10))\n",
-    "# print(\"\")\n",
-    "# print(\"\")\n",
-    "# print(\"States with the lowest ethanol per capita: \")\n",
-    "# print(bottom_sorted_consumption.head(10))"
+    "# print results \n",
+    "print(\"States with the highest ethanol per capita: \")\n",
+    "print(top_sorted_consumption.head(10))\n",
+    "print(\"\")\n",
+    "print(\"\")\n",
+    "print(\"States with the lowest ethanol per capita: \")\n",
+    "print(bottom_sorted_consumption.head(10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             State  Spirits_Tax\n",
+      "20        Maryland         1.50\n",
+      "17        Kentucky         1.92\n",
+      "25        Missouri         2.00\n",
+      "5         Colorado         2.28\n",
+      "43           Texas         2.40\n",
+      "16          Kansas         2.50\n",
+      "34    North Dakota         2.50\n",
+      "3         Arkansas         2.50\n",
+      "14         Indiana         2.68\n",
+      "40  South Carolina         2.72\n",
+      "\n",
+      "\n",
+      "            State  Ethanol_per_Capita\n",
+      "29  New Hampshire                4.83\n",
+      "7        Delaware                4.01\n",
+      "28         Nevada                3.43\n",
+      "26        Montana                3.32\n",
+      "34   North Dakota                3.26\n",
+      "45        Vermont                3.22\n",
+      "49      Wisconsin                3.11\n",
+      "19          Maine                2.99\n",
+      "5        Colorado                2.97\n",
+      "50        Wyoming                2.94\n"
+     ]
+    }
+   ],
    "source": [
     "# put lowest taxes and highest consumption in dataframes\n",
     "lowest_taxes = pd.DataFrame(bottom_sorted_tax)\n",
     "highest_consumption = pd.DataFrame(top_sorted_consumption)\n",
     "\n",
-    "#print results\n",
-    "# print(lowest_taxes.head(10))\n",
-    "# print(\"\")\n",
-    "# print(\"\")\n",
-    "# print(highest_consumption.head(10))"
+    "# print results\n",
+    "print(lowest_taxes.head(10))\n",
+    "print(\"\")\n",
+    "print(\"\")\n",
+    "print(highest_consumption.head(10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          State  Spirits_Tax\n",
+      "47   Washington        14.27\n",
+      "1        Alaska        12.80\n",
+      "13     Illinois         8.55\n",
+      "9       Florida         6.50\n",
+      "32     New York         6.44\n",
+      "31   New Mexico         6.06\n",
+      "11       Hawaii         5.98\n",
+      "6   Connecticut         5.94\n",
+      "36     Oklahoma         5.56\n",
+      "30   New Jersey         5.50\n",
+      "\n",
+      "\n",
+      "             State  Ethanol_per_Capita\n",
+      "44            Utah                1.36\n",
+      "48   West Virginia                1.82\n",
+      "36        Oklahoma                1.85\n",
+      "10         Georgia                1.91\n",
+      "3         Arkansas                1.92\n",
+      "0          Alabama                2.08\n",
+      "12           Idaho                2.10\n",
+      "35            Ohio                2.12\n",
+      "40  South Carolina                2.12\n",
+      "16          Kansas                2.12\n"
+     ]
+    }
+   ],
    "source": [
     "# put highest taxes and lowest consumption in dataframes\n",
     "highest_taxes = pd.DataFrame(top_sorted_tax)\n",
     "lowest_consumption = pd.DataFrame(bottom_sorted_consumption)\n",
     "\n",
     "# print results \n",
-    "# print(highest_taxes.head(10))\n",
-    "# print(\"\")\n",
-    "# print(\"\")\n",
-    "# print(lowest_consumption.head(10))"
+    "print(highest_taxes.head(10))\n",
+    "print(\"\")\n",
+    "print(\"\")\n",
+    "print(lowest_consumption.head(10))"
    ]
   },
   {
@@ -1171,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
